--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/dd43dcba0d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -22,297 +26,179 @@
           <li></li>
         </ul>
       </nav>
-      <section>
+      <section id="welcome-section">
         <h1>Hi, I am Joanna</h1>
-        <p>a web Developer</p>
+        <p>a Web Developer</p>
       </section>
-      <section>
+      <section id="projects" class="projects-section">
         <h2>These are some of my projects:</h2>
 
         <div class="album py-5 bg-light">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <a
+                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  target="_blank"
+                  class="project project-tile"
+                >
+                  <img class="project-image" src="#" alt="project" />
+                </a>
+              </div>
+              <div class="card-body">
+                <p class="project-title card-text">
+                  <span class="code">&lt;</span>
+                  Tribute Page
+                  <span class="code">&#47;&gt;</span>
+                </p>
               </div>
             </div>
 
-            <div class="col">
-              <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                {{< placeholder width="100%" height="225" background="#55595c"
-                color="#eceeef" class="card-img-top" text="Thumbnail" >}}
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
+            <div class="col text-center">
               <a
                 href="https://codepen.io/FreeCodeCamp/"
                 class="btn btn-show-all"
