--- a/index.html
+++ b/index.html
@@ -212,46 +212,46 @@
       <section id="contact" class="contact-section">
         <div class="contact-section-header">
           <h2>Let's work together...</h2>
-          <p>How do you take your coffee?</p>
+          <p>If you would like to contact me:</p>
         </div>
         <div class="contact-links">
           <a
-            href="https://facebook.com/freecodecamp"
+            href="https://www.facebook.com/askat58/"
             target="_blank"
             class="btn contact-details"
             ><i class="fab fa-facebook-square"></i> Facebook</a
           >
           <a
             id="profile-link"
-            href="https://github.com/freecodecamp"
+            href="https://github.com/askat58"
             target="_blank"
             class="btn contact-details"
             ><i class="fab fa-github"></i> GitHub</a
           >
           <a
-            href="https://twitter.com/freecodecamp"
+            href="https://www.linkedin.com/in/joanna-el%C5%BCbieta-t-288561181/"
             target="_blank"
             class="btn contact-details"
-            ><i class="fab fa-twitter"></i> Twitter</a
+            ><i class="fab fa-linkedin-in"></i> LinkedIn</a
           >
-          <a href="mailto:example@example.com" class="btn contact-details"
+          <a href="mailto:askat58@gmail.com" class="btn contact-details"
             ><i class="fas fa-at"></i> Send a mail</a
           >
-          <a href="tel:555-555-5555" class="btn contact-details"
+          <a href="tel:+447549272589" class="btn contact-details"
             ><i class="fas fa-mobile-alt"></i> Call me</a
           >
         </div>
       </section>
       <footer>
         <p>
-          **This is just a fake portfolio. All the projects and contact details
-          given are not real.
-        </p>
-        <p>
-          &copy; Created for
+          Copyright 2021&copy; This page created by
           <a href="https://www.freecodecamp.com/" target="_blank"
-            >freeCodeCamp <i class="fab fa-free-code-camp"></i
+            >Joanna Tucka <i class="fab fa-slack-hash"></i
           ></a>
+          is
+          <a href="https://github.com/askat58/Personal-portfolio"
+            >open-source on GitHub</a
+          >.
         </p>
       </footer>
     </div>
