Add icontent of the projects
- add folder with images
- add new links to the projects

--- a/index.html
+++ b/index.html
@@ -19,192 +19,229 @@
   </head>
   <body>
     <div class="container">
-      <nav>
+      <nav id="navbar" class="nav-list">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><a href="#welcome-section">About</a></li>
+          <li><a href="#projects">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <section id="welcome-section">
+      <section id="welcome-section" class="welcome-section">
         <h1>Hi, I am Joanna</h1>
         <p>a Web Developer</p>
       </section>
       <section id="projects" class="projects-section">
-        <h2>These are some of my projects:</h2>
+        <h2 class="projects-section-header">These are some of my projects:</h2>
+        <div class="project-grid">
+          <div class="album py-5 bg-light">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://inspiring-brattain-ccee86.netlify.app/"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/reactWeatherApp.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    React Weather App
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://inspiring-bhaskara-ce4cd1.netlify.app/"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/dictionary.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    React Dictionary
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://mystifying-edison-a73172.netlify.app/"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/aloeVera.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    Aloe Vera Landing Page
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://admiring-carson-69c8b8.netlify.app/"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/weatherApp.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    Weather App
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://festive-joliot-c22c43.netlify.app"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/einstein.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    Einstein Tribute Page
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://loving-leavitt-60dbed.netlify.app/"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/currencyFinder.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    Currency Finder
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://nervous-yonath-3cb7bb.netlify.app/"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/sevenDays.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    7 Days To Die
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://blissful-kilby-6dd4bd.netlify.app/"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/bussinessPage.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    Businnes Landing Page
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card shadow-sm">
+                  <a
+                    href="https://codepen.io/asia-tucka/pen/abpxJrM"
+                    target="_blank"
+                    class="project project-tile"
+                  >
+                    <img
+                      class="project-image"
+                      src="./img/documentationPage.png"
+                      alt="project"
+                    />
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="project-title card-text">
+                    <span class="code">&lt;</span>
+                    Documentation Page
+                    <span class="code">&#47;&gt;</span>
+                  </p>
+                </div>
+              </div>
 
-        <div class="album py-5 bg-light">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col">
-              <div class="card shadow-sm">
+              <div class="col text-center">
                 <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                  href="https://github.com/askat58"
+                  class="btn btn-show-all"
                   target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
+                  >Show all<i class="fas fa-chevron-right"></i
+                ></a>
               </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <a
-                  href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-                  target="_blank"
-                  class="project project-tile"
-                >
-                  <img class="project-image" src="#" alt="project" />
-                </a>
-              </div>
-              <div class="card-body">
-                <p class="project-title card-text">
-                  <span class="code">&lt;</span>
-                  Tribute Page
-                  <span class="code">&#47;&gt;</span>
-                </p>
-              </div>
-            </div>
-
-            <div class="col text-center">
-              <a
-                href="https://codepen.io/FreeCodeCamp/"
-                class="btn btn-show-all"
-                target="_blank"
-                >Show all<i class="fas fa-chevron-right"></i
-              ></a>
             </div>
           </div>
         </div>
