--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <nav id="navbar" class="nav-list">
-        <ul>
+        <ul class="nav-list">
           <li><a href="#welcome-section">About</a></li>
           <li><a href="#projects">Work</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -33,7 +33,7 @@
       <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects:</h2>
         <div class="project-grid">
-          <div class="album py-5 bg-light">
+          <div class="album p-5 bg-dark">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
                 <div class="card shadow-sm">
@@ -96,7 +96,7 @@
                 <div class="card-body">
                   <p class="project-title card-text">
                     <span class="code">&lt;</span>
-                    Aloe Vera Landing Page
+                    Landing Page
                     <span class="code">&#47;&gt;</span>
                   </p>
                 </div>
@@ -140,7 +140,7 @@
                 <div class="card-body">
                   <p class="project-title card-text">
                     <span class="code">&lt;</span>
-                    Einstein Tribute Page
+                    Tribute Page
                     <span class="code">&#47;&gt;</span>
                   </p>
                 </div>
@@ -206,7 +206,7 @@
                 <div class="card-body">
                   <p class="project-title card-text">
                     <span class="code">&lt;</span>
-                    Businnes Landing Page
+                    Businnes Page
                     <span class="code">&#47;&gt;</span>
                   </p>
                 </div>
@@ -228,7 +228,7 @@
                 <div class="card-body">
                   <p class="project-title card-text">
                     <span class="code">&lt;</span>
-                    Documentation Page
+                    Documentation
                     <span class="code">&#47;&gt;</span>
                   </p>
                 </div>
@@ -285,10 +285,8 @@
           <a href="https://www.freecodecamp.com/" target="_blank"
             >Joanna Tucka <i class="fab fa-slack-hash"></i
           ></a>
-          is
-          <a href="https://github.com/askat58/Personal-portfolio"
-            >open-source on GitHub</a
-          >.
+          is open-source on
+          <a href="https://github.com/askat58/Personal-portfolio"> GitHub</a>.
         </p>
       </footer>
     </div>
