--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
+    <div class=".container">
       <nav id="navbar" class="nav-list">
         <ul class="nav-list">
           <li><a href="#welcome-section">About</a></li>
@@ -31,9 +31,9 @@
         <p>a Web Developer</p>
       </section>
       <section id="projects" class="projects-section">
-        <h2 class="projects-section-header">These are some of my projects:</h2>
+        <h3 class="projects-section-header">These are some of my projects:</h3>
         <div class="project-grid">
-          <div class="album p-5 bg-dark">
+          <div class="album p-5 bg-succes">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
                 <div class="card shadow-sm">
