Add horizontal line

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>a Web Developer</p>
       </section>
       <section id="projects" class="projects-section">
-        <h3 class="projects-section-header">These are some of my projects:</h3>
+        <h3 class="projects-section-header">These are some of my projects:</h3><hr />
         <div class="project-grid">
           <div class="album p-5 bg-succes">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
