Add font awesome

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
       </nav>
       <section id="welcome-section" class="welcome-section">
         <h1>Hi, I am Joanna</h1>
-        <p>a Web Developer</p>
+        <p>a Front End Web Developer <i class="fab fa-slack-hash"></i></p>
       </section>
       <section id="projects" class="projects-section">
-        <h3 class="projects-section-header">These are some of my projects:</h3><hr />
+        <h3 class="projects-section-header">These are some of my projects:</h3>
+        <hr />
         <div class="project-grid">
           <div class="album p-5 bg-succes">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
