--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <section id="contact" class="contact-section">
         <div class="contact-section-header">
           <h2>Let's work together...</h2>
-          <p>If you would like to contact me:</p>
+          <p>Would you like to contact me?</p>
         </div>
         <div class="contact-links">
           <a
@@ -283,11 +283,18 @@
       <footer>
         <p>
           Copyright 2021&copy; This page created by
-          <a href="https://www.freecodecamp.com/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/joanna-el%C5%BCbieta-t-288561181/"
+            target="_blank"
             >Joanna Tucka <i class="fab fa-slack-hash"></i
           ></a>
           is open-source on
-          <a href="https://github.com/askat58/Personal-portfolio"> GitHub</a>.
+          <a
+            href="https://github.com/askat58/Personal-portfolio"
+            target="_blank"
+          >
+            GitHub</a
+          >.
         </p>
       </footer>
     </div>
