--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
       <section id="welcome-section" class="welcome-section">
         <h1>Hi, I am Joanna</h1>
-        <p>a Front End Web Developer <i class="fab fa-slack-hash"></i></p>
+        <p class="subheading-p">a Front End Web Developer <i class="fab fa-slack-hash"></i></p>
       </section>
       <section id="projects" class="projects-section">
         <h3 class="projects-section-header">These are some of my projects:</h3>
@@ -250,7 +250,7 @@
       <section id="contact" class="contact-section">
         <div class="contact-section-header">
           <h2>Let's work together...</h2>
-          <p>Would you like to contact me?</p>
+          <p class="subheading-p">Would you like to contact me?</p>
         </div>
         <div class="contact-links">
           <a
