--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </nav>
       <section id="welcome-section" class="welcome-section">
         <h1>Hi, I am Joanna</h1>
-        <p class="subheading-p">a Front End Web Developer <i class="fab fa-slack-hash"></i></p>
+        <p class="subheading-p">
+          a Front End Web Developer <i class="fab fa-slack-hash"></i>
+        </p>
       </section>
       <section id="projects" class="projects-section">
         <h3 class="projects-section-header">These are some of my projects:</h3>
