Add new button - visit personal web page

--- a/index.html
+++ b/index.html
@@ -253,6 +253,13 @@
         <div class="contact-section-header">
           <h2>Let's work together...</h2>
           <p class="subheading-p">Would you like to contact me?</p>
+          <a
+            href="https://joannatucka.com/"
+            target="_blank"
+            class="btn contact-details"
+            ><i class="fab fa-slack-hash"></i> Visit my personal web page here</a
+          >
+          <p class="subheading-p"> ...or follow my social media pages</p>
         </div>
         <div class="contact-links">
           <a
