--- a/index.html
+++ b/index.html
@@ -257,9 +257,10 @@
             href="https://joannatucka.com/"
             target="_blank"
             class="btn contact-details"
-            ><i class="fab fa-slack-hash"></i> Visit my personal web page here</a
+            ><i class="fab fa-slack-hash"></i> Visit my personal web page
+            here</a
           >
-          <p class="subheading-p"> ...or follow my social media pages</p>
+          <p class="subheading-p">...or follow my social media:</p>
         </div>
         <div class="contact-links">
           <a
