change addres of link

--- a/index.html
+++ b/index.html
@@ -293,9 +293,7 @@
       <footer>
         <p>
           Copyright 2021&copy; This page created by
-          <a
-            href="https://www.linkedin.com/in/joanna-el%C5%BCbieta-t-288561181/"
-            target="_blank"
+          <a href="https://joannatucka.com/" target="_blank"
             >Joanna Tucka <i class="fab fa-slack-hash"></i
           ></a>
           is open-source on
