--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <div class="col">
                 <div class="card shadow-sm">
                   <a
-                    href="https://nervous-yonath-3cb7bb.netlify.app/"
+                    href="https://confident-jones-2e6a73.netlify.app/"
                     target="_blank"
                     class="project project-tile"
                   >
