--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/dd43dcba0d.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <div class=".container">
