Set Prettier as a default formatter in VS Code and improve code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/dd43dcba0d.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <div class=".container">
@@ -257,9 +257,8 @@
             href="https://joannatucka.com/"
             target="_blank"
             class="btn contact-details"
-            ><i class="fab fa-slack-hash"></i> Visit my personal web page
-            here</a
-          >
+            ><i class="fab fa-slack-hash"></i> Visit my page
+          </a>
           <p class="subheading-p">...or follow my social media:</p>
         </div>
         <div class="contact-links">
