--- a/index.html
+++ b/index.html
@@ -253,13 +253,6 @@
         <div class="contact-section-header">
           <h2>Let's work together...</h2>
           <p class="subheading-p">Would you like to contact me?</p>
-          <a
-            href="https://joannatucka.com/"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fab fa-slack-hash"></i> Visit my page
-          </a>
-          <p class="subheading-p">...or follow my social media:</p>
         </div>
         <div class="contact-links">
           <a
@@ -276,7 +269,7 @@
             ><i class="fab fa-github"></i> GitHub</a
           >
           <a
-            href="https://www.linkedin.com/in/joanna-el%C5%BCbieta-t-288561181/"
+            href="https://www.linkedin.com/in/joannatucka/"
             target="_blank"
             class="btn contact-details"
             ><i class="fab fa-linkedin-in"></i> LinkedIn</a
@@ -292,7 +285,7 @@
       <footer>
         <p>
           Copyright 2021&copy; This page created by
-          <a href="https://joannatucka.com/" target="_blank"
+          <a href="https://www.linkedin.com/in/joannatucka/" target="_blank"
             >Joanna Tucka <i class="fab fa-slack-hash"></i
           ></a>
           is open-source on
